# squadpy-lite

./: pyproject.toml
