[tool.poetry]
name = "squadpy-lite"
version = "0.1.0"
description = ""
authors = ["Skillet <kilerskyman@gmail.com>"]
readme = "README.md"
packages = [{include = "squadpy_lite"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
